INSPECTIT-861: FindBugs warnings clearing